# inat-obs-scorer

./: .gitignore  .pre-commit-config.yaml  .sqlfluffignore  README.md  api_fields.yaml  e  environment.yaml  mlflow.db  observation.json  optuna.db  pyproject.toml  test.py
data/: features.parquet.dvc
examples/inat_api_response/identifications/: identification.json  similar_species.json
examples/inat_api_response/observation/: filtered_observation.json  observation.json
examples/inat_api_response/taxa/: taxa.json
examples/observations/: filtered_observation.json  observation.json
mlruns/1/0e3614fae0614535b4308fb4d7c39086/artifacts/: classification_report.txt  pipeline_description.json
mlruns/1/26f8d005aac04079b7b92e84db1308e2/artifacts/: classification_report.txt
mlruns/1/361aff85229445508c3e8d788c95ae83/artifacts/: classification_report.txt  pipeline_description.json
mlruns/1/477903c3406a4001b19ca6d6cb939daa/artifacts/: classification_report.txt
mlruns/1/fca427a2a9b34fb29fc9f71a9f5592d4/artifacts/: pipeline_description.json
notebooks/: api_eda.ipynb  api_observation.ipynb  api_strategt.ipynb  evaluation.html  evaluation.ipynb  evaluation.md  evaluation_old.ipynb  extract_json.ipynb  model_v01.ipynb  observations_eda.ipynb  training_features_eda.ipynb
notebooks/artifacts/: model.pkl  test_metrics.json  y_proba.npy  y_test.npy
queries/: features_disagreement.sql  features_vision.sql  unpack_identifications.sql  unpack_observations.sql  unpack_photos.sql  unpack_users.sql
queries/_old/: features_time.sql
queries/features/: community_taxon.sql  features_agg.sql  features_expert.sql  identifications.sql  identifiers.sql  json_schema.sql  label.sql  observations.sql  observers.sql  taxon.sql  training.sql
queries/ingest/: api_samples.sql  clean_inat_api.sql  unpack_observations.sql  unpack_photos.sql  unpack_relative.sql  unpack_taxa.sql  unpack_users.sql
queries/raw/: unpack_observations.sql  unpack_relative.sql  unpack_taxa.sql
queries/unload/: unpack_observations.sql  unpack_rel_tables.sql
queries/utils.sql/: check_api_calls.sql  check_label.sql
src/inatML/: cli.py
src/inatML.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inatML/app/: container.py  service.py
src/inatML/pipeline/ingest/: api.py  downloads.py
src/inatML/utils/: db.py  logger.py
src/inatML/workflows/: ingest_downloads_workflow.py  ingest_inat_api_workflow.py  ingest_workflow.py  process_features_workflow.py
src/inat_pipeline/: cli.py  exceptions.py
src/inat_pipeline/app/: __init__.py  config.py  container.py  service.py
src/inat_pipeline/db/: __init__.py  connections.py  lineage.py  params.py  protocols.py  sql.py  utils.py
src/inat_pipeline/db/adapters/: __init__.py  duckdb_adapter.py
src/inat_pipeline/inat_client/: base.py  factory.py
src/inat_pipeline/ingest/: api.py  downloads.py  protocols.py
src/inat_pipeline/ingest/api_fields/: observations.yaml  phenology.yaml
src/inat_pipeline/ingest/inat_client/: __init__.py  base.py  clients.py  config.py  factory.py  fetchers.py  fields.py  protocols.py  registery.py  writers.py
src/inat_pipeline/model/: __init__.py  config.py  core.py  eda.py  explainability.py  final.py  objective.py  registery.py  utils.py
src/inat_pipeline/model/utils/: __init__.py  features_diff.py
src/inat_pipeline/pipeline/: exceptions.py
src/inat_pipeline/pipeline/ingest/: api.py  downloads.py  fields.py
src/inat_pipeline/pipeline/model/: config.py  core.py  final.py  objective.py  prep.py  registery.py  utils.py
src/inat_pipeline/queries/: .gitignore  params.py  registery.py
src/inat_pipeline/queries/_export/: base.sql  (+10 more)
src/inat_pipeline/test/: final_model_params.json  latest.py  pipeline_config.json
src/inat_pipeline/train/: __init__.py  config.py  core.py  explainability.py  final.py  metrics.py  objective.py  registery.py  registery_coarse.py
src/inat_pipeline/utils/: __init__.py  config.py  db.py  git.py  logger.py  network.py  splits.py
src/inat_pipeline/workflows/: features_workflow.py  ingest_api_created_at_histogram.py  ingest_api_observations_histogram.py  ingest_api_observations_workflow.py  ingest_api_observed_on_histogram.py  ingest_api_photos_workflow.py  ingest_api_similar_species_workflow.py  ingest_api_taxa_workflow.py  ingest_api_workflow.py  ingest_downloads_workflow.py  ingest_inat_api_workflow.py  ingest_local_workflow.py  ingest_photos_workflow.py  ingest_s3_workflow.py  ingest_unpack_workflow.py  ingest_workflow.py  model_prep_workflow.py  model_workflow.py  process_features_workflow.py  stage_workflow.py  test_s3_workflow.py  test_workflow.py  train_workflow.py
src/pipeline/ingest/: downloads.py
src/utils/db/: __init__.py  functions.py  module.py
(+157 files in other folders)
