[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "inat_pipeline"
version = "0.0.1"
description = "Data pipeline for inaturalist observations"
authors = [{ name="Etienne Godin", email="etiennegodin@duck.com" }]

dependencies = [
    "pandas",
    "scikit-learn",
    "optuna",
    "mlflow"

]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "ruff",
]

[project.scripts]   # <-- entry point CLI
inat_pipe = "inat_pipeline.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (imports)
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Matches Black's default style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
# Updated the cov path to match your project name
addopts = "--cov=src/inat_pipeline --cov-report=term-missing --cov-report=html"
