[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "inat_pipeline"
version = "0.0.1"
description = "Data pipeline for inaturalist observations"
authors = [{ name="Etienne Godin", email="etiennegodin@duck.com" }]

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "jupyterlab",
    "scikit-learn",
    "lightgbm",
    "optuna",
    "mlflow",
    "tqdm",
    "shap",
    "sqlparams",
    "psutil",
    "requests",
    "aiohttp",
    "aiofiles",
    "aiolimiter",
    "duckdb == 1.4.3",
    "seaborn",
    "kaleido",
    "semver"



]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "ruff",
    "sqlfluff",
    "dvc",
    "jupyterlab"

]

[project.scripts]   # <-- entry point CLI
inat_pipe = "inat_pipeline.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (imports)
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Matches Black's default style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
# Updated the cov path to match your project name
addopts = "--cov=src/inat_pipeline --cov-report=term-missing --cov-report=html"
[tool.sqlfluff.core]
dialect = "duckdb"
templater = "placeholder"
rules = "layout"
exclude_rules = "AM04, AL05, LT05"

[tool.sqlfluff.templater.placeholder]
param_style = "colon"

[tool.sqlfluff.layout.type.comma]
spacing_before = "touch"

[tool.sqlfluff.layout.type.colon]
# This is perfect for keeping :param and ::INT compact
spacing_before = "touch"
spacing_after = "touch"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
